--- a/index.html
+++ b/index.html
@@ -86,22 +86,41 @@
         <div class="container">
           <div class="crud">
             <!--* Start Form -->
-            <!-- <form class="form">
+            <h2 class="heading-primary" id="posts">Posts</h2>
+
+            <form class="form">
               <div class="form-box">
                 <div class="input-box">
-                  <label for="content">Content:</label>
-                  <input type="text" id="content" autocomplete="off" required />
+                  <label for="title">Title:</label>
+                  <input type="text" id="title" autocomplete="off" required />
                 </div>
                 <div class="input-box">
-                  <label for="image">Image Url:</label>
-                  <input type="url" id="image" autocomplete="off" required />
+                  <label for="content">Content:</label>
+                  <textarea id="textarea" cols="30" rows="10"></textarea>
                 </div>
               </div>
               <div class="input-box">
                 <input type="button" id="submit" value="Create post" />
               </div>
-            </form> -->
+            </form>
 
+            <div class="posts">
+              <!-- <div class="card">
+                <div class="text-box">
+                  <p id="title">Lorem</p>
+                  <p id="content">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Sit facilis tenetur voluptas molestias laboriosam, nesciunt
+                    delectus officia animi porro enim expedita, error nihil
+                    exercitationem? Aliquam dolorem vitae quas? Quis, mollitia!
+                  </p>
+                </div>
+                <div class="buttons">
+                  <button class="update">Update</button>
+                  <button class="delete">Delete</button>
+                </div>
+              </div> -->
+            </div>
             <!--* End Form -->
           </div>
         </div>
